--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   spotless:
@@ -10,6 +16,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@master
+
+      - name: Setup Java
+        id: setup-jre
+        uses: actions/setup-java@v1
+        with:
+          java-version: "18" # always use 18 for building
+          architecture: x64
+
+      - name: Set Test Java Runtime Environment variable
+        run: echo "JAVA_TEST_HOME=${{ steps.setup-jre.outputs.path }}" >> $GITHUB_ENV
 
       - name: Spotless
         run: ./gradlew spotlessCheck
@@ -33,14 +49,25 @@ jobs:
           - "15"
           - "16"
           - "17"
+          - "18"
 
     steps:
       - uses: actions/checkout@master
 
-      - name: Setup Java
+      - name: Setup Test Java Runtime
+        id: setup-test-jre
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java-version }}
+          architecture: x64
+
+      - name: Set Test Java Runtime Environment variable
+        run: echo "JAVA_TEST_HOME=${{ steps.setup-test-jre.outputs.path }}" >> $GITHUB_ENV
+
+      - name: Setup Java
+        uses: actions/setup-java@v1
+        with:
+          java-version: "18" # always use 18 for building
           architecture: x64
 
       - name: Tweak gradle.properties for Java 1.8
@@ -48,7 +75,9 @@ jobs:
         run: sed -e '/--add-exports/ s/^#*/#/' -i gradle.properties
 
       - name: Display version
-        run: ./gradlew --version
+        run: |
+          ./gradlew --version
+          echo "JAVA_TEST_HOME=$JAVA_TEST_HOME"
 
       - name: Build artifacts
         run: ./gradlew assemble
@@ -57,7 +86,7 @@ jobs:
         run: docker run -d -p 12111-12112:12111-12112 stripe/stripe-mock && sleep 5
 
       - name: Run test suite
-        run: ./gradlew check
+        run: ./gradlew test
 
       - name: Send code coverage report to coveralls.io
         run: ./gradlew jacocoTestReport coveralls
