--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,3 +108,20 @@ jobs:
         with:
           name: javadoc
           path: build/docs/javadoc
+
+  publish:
+    #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download all workflow run artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: libs
+        path: libs
+
+    - name: Download all workflow run artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: maven
+        path: maven
