--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ on:
       - master
 
 jobs:
-  spotless:
-    name: Spotless
+  build:
+    name: Build
 
     runs-on: ubuntu-latest
 
@@ -30,8 +30,27 @@ jobs:
       - name: Spotless
         run: ./gradlew spotlessCheck
 
-  build:
-    name: Build and test
+      - name: Build artifacts
+        run: ./gradlew assemble generatePomFileForMavenJavaPublication javadoc
+
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: libs
+          path: build/libs
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: maven
+          path: build/publications/mavenJava/
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: javadoc
+          path: build/docs/javadoc
+
+  test:
+    name: Test
 
     runs-on: ubuntu-latest
 
@@ -79,9 +98,6 @@ jobs:
           ./gradlew --version
           echo "JAVA_TEST_HOME=$JAVA_TEST_HOME"
 
-      - name: Build artifacts
-        run: ./gradlew assemble generatePomFileForMavenJavaPublication javadoc
-
       - name: Start stripe-mock
         run: docker run -d -p 12111-12112:12111-12112 stripe/stripe-mock && sleep 5
 
@@ -93,25 +109,10 @@ jobs:
         env:
           CI_NAME: github-actions
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: libs
-          path: build/libs
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: maven
-          path: build/publications/mavenJava/
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: javadoc
-          path: build/docs/javadoc
 
   publish:
     #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
-    needs: [build]
+    needs: [build, test]
     runs-on: ubuntu-latest
     steps:
     - name: Download all workflow run artifacts
