--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,23 +31,7 @@ jobs:
         run: ./gradlew spotlessCheck
 
       - name: Build artifacts
-        run: ./gradlew assemble generatePomFileForMavenJavaPublication javadoc
-
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: libs
-          path: build/libs
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: maven
-          path: build/publications/mavenJava/
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v2
-        with:
-          name: javadoc
-          path: build/docs/javadoc
+        run: ./gradlew assemble
 
   test:
     name: Test
@@ -111,6 +95,35 @@ jobs:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
   publish:
+    #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Java
+        id: setup-jre
+        uses: actions/setup-java@v1
+        with:
+          java-version: "18" # always use 18 for building
+          architecture: x64
+
+      - name: Configure GPG Key
+        run: |
+          set -ex
+          echo $GPG_SIGNING_PRIVKEY | base64 --decode | gpg --import --batch --yes --pinentry-mode loopback --passphrase "$GPG_SIGNING_PASSPHRASE"
+        env:
+          GPG_SIGNING_PRIVKEY: ${{ secrets.GPG_SIGNING_PRIVKEY }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+
+      - name: Publish package
+        run: |
+          ./gradlew publish closeAndRelease --stacktrace --debug -Dorg.gradle.project.NEXUS_USERNAME=$NEXUS_USERNAME -Dorg.gradle.project.NEXUS_PASSWORD=$NEXUS_PASSWORD -Dorg.gradle.project.signing.gnupg.keyName=$GPG_SIGNING_KEYID -Dorg.gradle.project.signing.gnupg.passphrase=$GPG_SIGNING_PASSPHRASE
+        env:
+          TWINE_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          GPG_SIGNING_KEYID: ${{ secrets.GPG_SIGNING_KEYID }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+
+  publish-docs:
     #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
     needs: [build, test]
     runs-on: ubuntu-latest
