--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
 
   publish:
     #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
-    needs: [build, test]
+    #needs: [build, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -126,7 +126,7 @@ jobs:
 
   publish-docs:
     #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
-    needs: [build, test]
+    #needs: [build, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
