--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,13 @@
 name: CI
 
 on:
+  workflow_dispatch: {}
   push:
-    branches:
-      - master
+    branches: [master, pakrym/release-pipeline]
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+*
   pull_request:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
   build:
@@ -95,8 +96,11 @@ jobs:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
   publish:
-    #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
-    #needs: [build, test]
+    if: >-
+        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
+        (github.ref == 'refs/heads/pakrym/release-pipeline' || startsWith(github.ref, 'refs/tags/v')) &&
+        endsWith(github.actor, '-stripe')
+    needs: [build, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -109,13 +113,13 @@ jobs:
       - name: Set Test Java Runtime Environment variable
         run: echo "JAVA_TEST_HOME=${{ steps.setup-jre.outputs.path }}" >> $GITHUB_ENV
 
-      # - name: Configure GPG Key
-      #   run: |
-      #     set -ex
-      #     echo $GPG_SIGNING_PRIVKEY | base64 --decode | gpg --import --batch --yes --pinentry-mode loopback --passphrase "$GPG_SIGNING_PASSPHRASE"
-      #   env:
-      #     GPG_SIGNING_PRIVKEY: ${{ secrets.GPG_SIGNING_PRIVKEY }}
-      #     GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+      - name: Configure GPG Key
+        run: |
+          set -ex
+          echo $GPG_SIGNING_PRIVKEY | base64 --decode | gpg --import --batch --yes --pinentry-mode loopback --passphrase "$GPG_SIGNING_PASSPHRASE"
+        env:
+          GPG_SIGNING_PRIVKEY: ${{ secrets.GPG_SIGNING_PRIVKEY }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
 
       - name: Publish package
         run: |
@@ -127,8 +131,11 @@ jobs:
           GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
 
   publish-docs:
-    #if: (github.event_name == 'push') && (startsWith(github.ref, 'refs/tags/v') && (endsWith(github.actor, '-stripe'))
-    #needs: [build, test]
+    if: >-
+      ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
+      (github.ref == 'refs/heads/pakrym/release-pipeline' || startsWith(github.ref, 'refs/tags/v')) &&
+      endsWith(github.actor, '-stripe')
+    needs: [build, test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -144,5 +151,5 @@ jobs:
       - name: Publish Javadoc
         run: |
           ./gradlew gitPublishPush
-#        env:
-#          #GRGIT_USER: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GRGIT_USER: ${{ secrets.GITHUB_TOKEN }}
