--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,15 @@
 name: CI
 
 on:
+  workflow_dispatch: {}
   push:
-    branches:
-      - master
+    branches: [master, pakrym/release-pipeline]
   pull_request:
-    branches:
-      - master
+    branches: [master]
 
 jobs:
-  spotless:
-    name: Spotless
+  build:
+    name: Build
 
     runs-on: ubuntu-latest
 
@@ -30,8 +29,11 @@ jobs:
       - name: Spotless
         run: ./gradlew spotlessCheck
 
-  tests:
-    name: Tests
+      - name: Build artifacts
+        run: ./gradlew assemble
+
+  test:
+    name: Test
 
     runs-on: ubuntu-latest
 
@@ -79,9 +81,6 @@ jobs:
           ./gradlew --version
           echo "JAVA_TEST_HOME=$JAVA_TEST_HOME"
 
-      - name: Build artifacts
-        run: ./gradlew assemble
-
       - name: Start stripe-mock
         run: docker run -d -p 12111-12112:12111-12112 stripe/stripe-mock && sleep 5
 
@@ -93,3 +92,62 @@ jobs:
         env:
           CI_NAME: github-actions
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+
+  publish:
+    if: >-
+        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
+        (github.ref == 'refs/heads/pakrym/release-pipeline' || startsWith(github.ref, 'refs/tags/v')) &&
+        endsWith(github.actor, '-stripe')
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup Java
+        id: setup-jre
+        uses: actions/setup-java@v1
+        with:
+          java-version: "18" # always use 18 for building
+          architecture: x64
+      - name: Set Test Java Runtime Environment variable
+        run: echo "JAVA_TEST_HOME=${{ steps.setup-jre.outputs.path }}" >> $GITHUB_ENV
+
+      - name: Configure GPG Key
+        run: |
+          set -ex
+          echo $GPG_SIGNING_PRIVKEY | base64 --decode | gpg --import --batch --yes --pinentry-mode loopback --passphrase "$GPG_SIGNING_PASSPHRASE"
+        env:
+          GPG_SIGNING_PRIVKEY: ${{ secrets.GPG_SIGNING_PRIVKEY }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+
+      - name: Publish package
+        run: |
+          ./gradlew publish closeAndRelease -Dorg.gradle.project.NEXUS_USERNAME=$NEXUS_USERNAME -Dorg.gradle.project.NEXUS_PASSWORD=$NEXUS_PASSWORD -Dorg.gradle.project.signing.gnupg.keyName=$GPG_SIGNING_KEYID -Dorg.gradle.project.signing.gnupg.passphrase=$GPG_SIGNING_PASSPHRASE
+        env:
+          NEXUS_USERNAME: ${{ secrets.NEXUS_USERNAME }}
+          NEXUS_PASSWORD: ${{ secrets.NEXUS_PASSWORD }}
+          GPG_SIGNING_KEYID: ${{ secrets.GPG_SIGNING_KEYID }}
+          GPG_SIGNING_PASSPHRASE: ${{ secrets.GPG_SIGNING_PASSPHRASE }}
+
+  publish-docs:
+    if: >-
+      ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
+      (github.ref == 'refs/heads/pakrym/release-pipeline' || startsWith(github.ref, 'refs/tags/v')) &&
+      endsWith(github.actor, '-stripe')
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup Java
+        id: setup-jre
+        uses: actions/setup-java@v1
+        with:
+          java-version: "18" # always use 18 for building
+          architecture: x64
+      - name: Set Test Java Runtime Environment variable
+        run: echo "JAVA_TEST_HOME=${{ steps.setup-jre.outputs.path }}" >> $GITHUB_ENV
+
+      - name: Publish Javadoc
+        run: |
+          ./gradlew gitPublishPush
+        env:
+          GRGIT_USER: ${{ secrets.GITHUB_TOKEN }}
