--- a/build.gradle
+++ b/build.gradle
@@ -142,7 +142,7 @@ coveralls {
 }
 
 gitPublish {
-    repoUri = 'git@github.com:stripe/stripe-java.git'
+    repoUri = 'https://github.com/stripe/stripe-java.git'
     branch = 'gh-pages'
     sign = false // disable commit signing
 
