--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,16 @@ on:
     branches:
       - master
       - beta
+      - sdk-release/**
+      - feature/**
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
   pull_request:
     branches:
       - master
       - beta
+      - sdk-release/**
+      - feature/**
 
 jobs:
   build:
