--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,6 +142,7 @@ jobs:
     if: >-
       ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
       startsWith(github.ref, 'refs/tags/v') &&
+      !contains(github.ref, 'beta') &&
       endsWith(github.actor, '-stripe')
     needs: [build, test]
     runs-on: ubuntu-latest
