Update coveralls to only run for one java version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,6 +99,7 @@ jobs:
 
       - name: Send code coverage report to coveralls.io
         run: ./gradlew jacocoTestReport coveralls
+        if: matrix.java-version == '18'
         env:
           CI_NAME: github-actions
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
