--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: ./gradlew spotlessCheck
 
       - name: Build artifacts
-        run: ./gradlew assemble
+        run: ./gradlew assemble javadoc
 
   test:
     name: Test
