--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,12 @@ buildscript {
         //Add only for SNAPSHOT versions
         //maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
-    dependencies {
-        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.30.0"
-    }
 }
 
 plugins {
     id "java"
     id "maven-publish"
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
     id "signing"
     id "jacoco"
     id "io.freefair.lombok" version "6.3.0"
