Try to trigger a release

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,8 +106,7 @@ jobs:
 
   publish:
     if: >-
-        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
-        startsWith(github.ref, 'refs/tags/v') &&
+        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'pull_request')) &&
         endsWith(github.actor, '-stripe')
     needs: [build, test]
     runs-on: ubuntu-latest
