Revert testing changes

--- a/deploy.gradle
+++ b/deploy.gradle
@@ -111,7 +111,7 @@ afterEvaluate { project ->
         }
         repositories {
             maven {
-                name = "sonatype"
+                name = "nexus"
                 def releasesRepoUrl = getReleaseRepositoryUrl()
                 def snapshotsRepoUrl = getSnapshotRepositoryUrl()
                 url = isReleaseBuild() ? releasesRepoUrl : snapshotsRepoUrl
