--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,16 +51,16 @@ jobs:
       fail-fast: false
       matrix:
         java-version:
-          # - "1.8"
-          # - "9"
-          # - "10"
-          # - "11"
-          # - "12"
-          # - "13"
-          # - "14"
-          # - "15"
-          # - "16"
-          # - "17"
+          - "1.8"
+          - "9"
+          - "10"
+          - "11"
+          - "12"
+          - "13"
+          - "14"
+          - "15"
+          - "16"
+          - "17"
           - "18"
 
     steps:
@@ -106,7 +106,8 @@ jobs:
 
   publish:
     if: >-
-        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'pull_request')) &&
+        ((github.event_name == 'workflow_dispatch') || (github.event_name == 'push')) &&
+        startsWith(github.ref, 'refs/tags/v') &&
         endsWith(github.actor, '-stripe')
     needs: [build, test]
     runs-on: ubuntu-latest
