--- a/deploy.gradle
+++ b/deploy.gradle
@@ -8,7 +8,6 @@
 
 apply plugin: "maven-publish"
 apply plugin: "signing"
-apply plugin: "io.codearte.nexus-staging"
 
 def isReleaseBuild() {
     return VERSION_NAME.contains("SNAPSHOT") == false
@@ -32,6 +31,23 @@ def getRepositoryPassword() {
     return hasProperty("NEXUS_PASSWORD") ? NEXUS_PASSWORD : ""
 }
 
+
+nexusPublishing {
+    packageGroup = GROUP
+
+    repositories {
+        sonatype {
+            username = getRepositoryUsername()
+            password = getRepositoryPassword()
+        }
+    }
+
+    transitionCheckOptions {
+        maxRetries.set(40)
+        delayBetween.set(java.time.Duration.ofMillis(4000))
+    }
+}
+
 afterEvaluate { project ->
     tasks.withType(Sign) {
         onlyIf { isReleaseBuild() && project.hasProperty("signing.gnupg.keyName") }
@@ -51,14 +67,6 @@ afterEvaluate { project ->
         required { isReleaseBuild() && gradle.taskGraph.hasTask("publish") }
         useGpgCmd()
         sign publishing.publications
-    }
-
-    nexusStaging {
-        packageGroup = GROUP
-        numberOfRetries = 40
-        delayBetweenRetriesInMillis = 4000
-        username = getRepositoryUsername()
-        password = getRepositoryPassword()
     }
 
     publishing {
